[Module JAR info...]